@@ -22,6 +22,7 @@ import com.hkgov.csb.eproof.dao.EmailEventRepository;
 import com.hkgov.csb.eproof.entity.EmailEvent;
 import com.hkgov.csb.eproof.service.EmailService;
 import jakarta.mail.MessagingException;
+import java.io.File;
 import java.io.InputStream;
 import java.util.*;
 import java.util.stream.Collectors;
@@ -83,6 +84,8 @@ public class EmailEventListener {
     public void handleAsyncEmailEvent(EmailEvent event) {
         try {
             if (env.equals("uat") || env.equals("prod")) {
+                logger.info("DoSend Entry Point");
+                
                 this.DoSend(event);
             } else {
                 emailService.sendEmail(
@@ -98,7 +101,7 @@ public class EmailEventListener {
         } catch (Exception e) {
             e.printStackTrace();
             logger.error("handleAsyncEmailEvent Failed Pk:"
-                    + event.getEmailMessageId() + " Reason:" + e.getMessage());
+            + event.getEmailMessageId() + " Reason:" + e.getMessage());
             event.setStatus("FAILED");
         }
         emailEventRepository.save(event);
@@ -107,13 +110,14 @@ public class EmailEventListener {
     public void DoSend(final EmailEvent event) {
         try {
             Properties prop = getSSLProperties(endpointName, endpointUrl);
-            logger.info("DoSend function enter point");
+
             List<String> toList = new ArrayList<>();
-            //		List<String> files = new ArrayList<>();
-            // toList.add(event.getEmailMessage().getTo());
-            //		files.add("abc.pdf");
+            // List<String> files = new ArrayList<>();
+            toList.add(event.getEmailMessage().getTo());
+            // files.add("abc.pdf");
             // Create the NotificationRestfulClient object
-            NotificationRestfulClient notiRestfulClient = new NotificationRestfulClient(prop);
+            NotificationRestfulClient notiRestfulClient =
+                    new NotificationRestfulClient(prop);
 
             // Prepare web services parameter value
             String chanType = "EM"; // Channel type
@@ -121,13 +125,12 @@ public class EmailEventListener {
             String contentType = "text/html"; // Character set
             String subject = "";
             String content = "";
-            // if(event.getEmailMessage().getIsCustom() != null && event.getEmailMessage().getIsCustom()){
-                // subject = event.getEmailMessage().getSubject();
-                // content = event.getEmailMessage().getBody();
-            // }else{
-                // subject = event.getEmailMessage().getEmailTemplate().getSubject();
-                // content = emailService.convertContextToHtmlBody(event.getEmailMessage().getEmailTemplate().getBody(),event.getEmailMessage().getContext(), Locale.ENGLISH); ;
-            // }
+
+            subject = event.getEmailMessage().getSubject();
+            content = event.getEmailMessage().getBody();
+
+
+
             boolean isEncrypt = false;
             boolean isSign = false;
             boolean isRestricted = false;
@@ -136,104 +139,102 @@ public class EmailEventListener {
             List<Attachment> attachments = new ArrayList<>();
             Attachment attachment = new Attachment();
             boolean containsAttachments = false;
-            // ObjectUtils.isNotEmpty(event.getEmailMessage().getAttachment());
 
             if (containsAttachments) {
-               /* if (useSelfAttachment.equals("true")) {
-                    attachment.setFileContent(EncoderUtils.BASE64Encode(Files.readAllBytes(Paths.get(useSelfPath))));
-                    attachment.setContentType(useSelfContentType);
-                    attachment.setFileName(useSelfAttachmentFileName);
+                /*
+                 * if (useSelfAttachment.equals("true")) { attachment.setFileContent(EncoderUtils.BASE64Encode(Files.readAllBytes(Paths.get(useSelfPath)))); attachment.setContentType(useSelfContentType);
+                 * attachment.setFileName(useSelfAttachmentFileName);
+                 * 
+                 * attachments.add(attachment);
+                 * 
+                 * 
+                 * } else {
+                 */
+            //     attachment.setFileName(
+            //             event.getEmailMessage().getAttachmentName());
+            //     try (InputStream inputStream = event.getEmailMessage()
+            //             .getAttachment().getInputStream()) {
+            //         attachment.setFileContent(inputStream.readAllBytes());
+            //     }
+            //     attachment.setContentType(event.getEmailMessage()
+            //             .getAttachment().getContentType());
+            //     attachments.add(attachment);
+            //     // }
 
-                    attachments.add(attachment);
+            //     logger.info("[File 2] getFileName: {}",
+            //             event.getEmailMessage().getAttachmentName());
+            //     logger.info("[File 2] getContentType: {}", event
+            //             .getEmailMessage().getAttachment().getContentType());
+            //     try (InputStream inputStream = event.getEmailMessage()
+            //             .getAttachment().getInputStream()) {
+            //         logger.info("[File 2] size: {}", EncoderUtils
+            //                 .BASE64Encode(inputStream.readAllBytes()).length);
+            //     }
+            // }
+            /*
+             * if (containsAttachments) {
+             * 
+             * if (useSelfAttachment.equals("true")) { attachment.setFileContent(EncoderUtils.BASE64Encode(Files.readAllBytes(Paths.get(useSelfPath)))); attachment.setContentType(useSelfContentType);
+             * attachment.setFileName(useSelfAttachmentFileName);
+             * 
+             * attachments.add(attachment);
+             * 
+             * 
+             * } else { attachment.setFileName(event.getEmailMessage().getAttachmentName()); try (InputStream inputStream = event.getEmailMessage().getAttachment().getInputStream()) {
+             * attachment.setFileContent(EncoderUtils.BASE64Encode(inputStream.readAllBytes())); } attachment.setContentType(event.getEmailMessage().getAttachment().getContentType()); attachments.add(attachment);
+             * }
+             * 
+             * logger.info("useSelfAttachment: {}", useSelfAttachment); // logger.info("[File 1] getFileContent: {}", EncoderUtils.BASE64Encode(Files.readAllBytes(Paths.get(useSelfPath))));
+             * logger.info("[File 1] getFileName: {}", useSelfAttachmentFileName); logger.info("[File 1] getContentType: {}", useSelfContentType); logger.info("[File 1] size: {}",
+             * EncoderUtils.BASE64Encode(Files.readAllBytes(Paths.get(useSelfPath))).length); // logger.info("[File 2] getFileContent: {}",
+             * EncoderUtils.BASE64Encode(event.getEmailMessage().getAttachment().getInputStream().readAllBytes())); logger.info("[File 2] getFileName: {}", event.getEmailMessage().getAttachmentName());
+             * logger.info("[File 2] getContentType: {}", event.getEmailMessage().getAttachment().getContentType()); try (InputStream inputStream = event.getEmailMessage().getAttachment().getInputStream()) {
+             * logger.info("[File 2] size: {}", EncoderUtils.BASE64Encode(inputStream.readAllBytes()).length); } }
+             */
 
 
-                } else {*/
-                // attachment.setFileName(event.getEmailMessage().getAttachmentName());
-                // try (InputStream inputStream = event.getEmailMessage().getAttachment().getInputStream()) {
-                //     attachment.setFileContent(inputStream.readAllBytes());
-                // }
-                // attachment.setContentType(event.getEmailMessage().getAttachment().getContentType());
-                // attachments.add(attachment);
-//                }
-
-                // logger.info("[File 2] getFileName: {}", event.getEmailMessage().getAttachmentName());
-                // logger.info("[File 2] getContentType: {}", event.getEmailMessage().getAttachment().getContentType());
-                // try (InputStream inputStream = event.getEmailMessage().getAttachment().getInputStream()) {
-                //     logger.info("[File 2] size: {}", EncoderUtils.BASE64Encode(inputStream.readAllBytes()).length);
-                // }
+            // if (files != null && files.size() > 0) {
+            // attachments = files.stream().map(x -> {
+            // Attachment attachment = new Attachment();
+            // try {
+            // attachment.setFileContent(EncoderUtils.BASE64Encode(Files.readAllBytes(Paths.get(curPath + "\\" + x))));
+            // } catch (IOException e) {
+            // // TODO Auto-generated catch block
+            // e.printStackTrace();
+            // }
+            // attachment.setContentType("application/pdf");
+            // attachment.setFileName(x);
+            // return attachment;
+            // }).collect(Collectors.toList());
             }
-            /*if (containsAttachments) {
+            //
 
-                if (useSelfAttachment.equals("true")) {
-                    attachment.setFileContent(EncoderUtils.BASE64Encode(Files.readAllBytes(Paths.get(useSelfPath))));
-                    attachment.setContentType(useSelfContentType);
-                    attachment.setFileName(useSelfAttachmentFileName);
-
-                    attachments.add(attachment);
-
-
-                } else {
-                    attachment.setFileName(event.getEmailMessage().getAttachmentName());
-                    try (InputStream inputStream = event.getEmailMessage().getAttachment().getInputStream()) {
-                        attachment.setFileContent(EncoderUtils.BASE64Encode(inputStream.readAllBytes()));
-                    }
-                    attachment.setContentType(event.getEmailMessage().getAttachment().getContentType());
-                    attachments.add(attachment);
-                }
-
-                logger.info("useSelfAttachment: {}", useSelfAttachment);
-//                logger.info("[File 1] getFileContent: {}", EncoderUtils.BASE64Encode(Files.readAllBytes(Paths.get(useSelfPath))));
-                logger.info("[File 1] getFileName: {}", useSelfAttachmentFileName);
-                logger.info("[File 1] getContentType: {}", useSelfContentType);
-                logger.info("[File 1] size: {}",  EncoderUtils.BASE64Encode(Files.readAllBytes(Paths.get(useSelfPath))).length);
-//                logger.info("[File 2] getFileContent: {}", EncoderUtils.BASE64Encode(event.getEmailMessage().getAttachment().getInputStream().readAllBytes()));
-                logger.info("[File 2] getFileName: {}", event.getEmailMessage().getAttachmentName());
-                logger.info("[File 2] getContentType: {}", event.getEmailMessage().getAttachment().getContentType());
-                try (InputStream inputStream = event.getEmailMessage().getAttachment().getInputStream()) {
-                    logger.info("[File 2] size: {}", EncoderUtils.BASE64Encode(inputStream.readAllBytes()).length);
-                }
-            }*/
-
-
-//            if (files != null && files.size() > 0) {
-//                attachments = files.stream().map(x -> {
-//                    Attachment attachment = new Attachment();
-//                    try {
-//                        attachment.setFileContent(EncoderUtils.BASE64Encode(Files.readAllBytes(Paths.get(curPath + "\\" + x))));
-//                    } catch (IOException e) {
-//                        // TODO Auto-generated catch block
-//                        e.printStackTrace();
-//                    }
-//                    attachment.setContentType("application/pdf");
-//                    attachment.setFileName(x);
-//                    return attachment;
-//                }).collect(Collectors.toList());
-//            }
-//
-
-//            // Prepare recipient detail array
+            // // Prepare recipient detail array
             Recipient[] recipientDetailArray = new Recipient[0];
             logger.info("toList size: {}", toList.size());
             // numOfReceipient � no. of notification receipient
             if (toList != null && toList.size() > 0) {
-                if(!"prod".equalsIgnoreCase(env)){
+                if (!"prod".equalsIgnoreCase(env)) {
                     List<Attachment> finalAttachments = attachments;
-                    recipientDetailArray = toList.stream().filter(this::whitelistFilter).map(x -> {
-                        Recipient recipient = new Recipient();
-                        recipient.setChanAddr(x);
-                        logger.info("[Email] email: {}", x);
+                    recipientDetailArray = toList.stream()
+                            .filter(this::whitelistFilter).map(x -> {
+                                Recipient recipient = new Recipient();
+                                recipient.setChanAddr(x);
+                                logger.info("[Email] email: {}", x);
 
-                        recipient.getRecipientAtthFile().addAll(finalAttachments);
-                        return recipient;
-                    }).toList().toArray(new Recipient[0]);
-                }else{
+                                recipient.getRecipientAtthFile()
+                                        .addAll(finalAttachments);
+                                return recipient;
+                            }).toList().toArray(new Recipient[0]);
+                } else {
                     List<Attachment> finalAttachments = attachments;
                     recipientDetailArray = toList.stream().map(x -> {
                         Recipient recipient = new Recipient();
                         recipient.setChanAddr(x);
                         logger.info("[Email] email: {}", x);
 
-                        recipient.getRecipientAtthFile().addAll(finalAttachments);
+                        recipient.getRecipientAtthFile()
+                                .addAll(finalAttachments);
                         return recipient;
                     }).toList().toArray(new Recipient[0]);
                 }
@@ -242,52 +243,60 @@ public class EmailEventListener {
 
 
 
-//            Attachment [] attachmentArray = new Attachment[1];
-//            attachmentArray[0] = new Attachment();
-//            boolean containsAttachments = ObjectUtils.isNotEmpty(event.getEmailMessage().getAttachment());
-//            if (containsAttachments) {
-//                attachmentArray[0].setFileName(event.getEmailMessage().getAttachmentName());
-//                attachmentArray[0].setFileContent(EncoderUtils.BASE64Encode(event.getEmailMessage().getAttachment().getInputStream().readAllBytes()));
-//                attachmentArray[0].setContentType(event.getEmailMessage().getAttachment().getContentType());
-//            }
+            // Attachment [] attachmentArray = new Attachment[1];
+            // attachmentArray[0] = new Attachment();
+            // boolean containsAttachments = ObjectUtils.isNotEmpty(event.getEmailMessage().getAttachment());
+            // if (containsAttachments) {
+            // attachmentArray[0].setFileName(event.getEmailMessage().getAttachmentName());
+            // attachmentArray[0].setFileContent(EncoderUtils.BASE64Encode(event.getEmailMessage().getAttachment().getInputStream().readAllBytes()));
+            // attachmentArray[0].setContentType(event.getEmailMessage().getAttachment().getContentType());
+            // }
 
-            // logger.info("[1]");
-            // Attachment[] attachmentArray = attachments.toArray(new Attachment[attachments.size()]);
-            // logger.info("attachmentArray size: {}", attachmentArray.length);
-            // for (Attachment att : attachmentArray) {
-            //     logger.info("- attachment file size: {}", att.getFileContent().length);
-            // }
-            // logger.info("recipientDetailArray size: {}", recipientDetailArray.length);
-            // for (Recipient rec : recipientDetailArray) {
-            //     logger.info("- recipient attachment list size: {}", rec.getRecipientAtthFile().size());
-            //     for (Attachment a : rec.getRecipientAtthFile()) {
-            //         logger.info("-- recipient attachment file size: {}", a.getFileContent().length);
-            //     }
-            // }
+            logger.info("[1]");
+            Attachment[] attachmentArray =
+                    attachments.toArray(new Attachment[attachments.size()]);
+            logger.info("attachmentArray size: {}", attachmentArray.length);
+            for (Attachment att : attachmentArray) {
+                logger.info("- attachment file size: {}",
+                        att.getFileContent().length);
+            }
+            logger.info("recipientDetailArray size: {}",
+                    recipientDetailArray.length);
+            for (Recipient rec : recipientDetailArray) {
+                logger.info("- recipient attachment list size: {}",
+                        rec.getRecipientAtthFile().size());
+                for (Attachment a : rec.getRecipientAtthFile()) {
+                    logger.info("-- recipient attachment file size: {}",
+                            a.getFileContent().length);
+                }
+            }
 
 
             // Create and call the Notification send service
-            Response resp = notiRestfulClient.sendNotificationRequest(chanType, charSet, contentType, subject,
-                    content.getBytes(), new Attachment[0], recipientDetailArray, isEncrypt,
-                    isSign, isRestricted, isUrgent);
-//            Response resp = notiRestfulClient.sendNotificationRequest(chanType, charSet, contentType, subject,
-//                    content.getBytes(), attachments.toArray(new Attachment[1]), recipientDetailArray, isEncrypt,
-//                    isSign, isRestricted, isUrgent);
+            Response resp = notiRestfulClient.sendNotificationRequest(chanType,
+                    charSet, contentType, subject, content.getBytes(),
+                    new Attachment[0], recipientDetailArray, isEncrypt, isSign,
+                    isRestricted, isUrgent);
+            // Response resp = notiRestfulClient.sendNotificationRequest(chanType, charSet, contentType, subject,
+            // content.getBytes(), attachments.toArray(new Attachment[1]), recipientDetailArray, isEncrypt,
+            // isSign, isRestricted, isUrgent);
             logger.info("[2]");
-            logger.info("resp status code : "+resp.getStatus());
-            logger.info("resp body: "+resp.readEntity(String.class));
+            logger.info("resp status code : " + resp.getStatus());
+            logger.info("resp body: " + resp.readEntity(String.class));
 
             if (resp.getStatus() == Response.Status.OK.getStatusCode()) {
-                //String ResultCd = notiRestfulClient.getNotificationStatus(resp);
-                //System.out.println(ResultCd);
-                List<NotiStatus> notiStatusList = notiRestfulClient.getNotificationNotificationStatus(resp);
-                for (NotiStatus notiStatus: notiStatusList) {
-                    logger.warn("ChanAddr: "+notiStatus.getChanAddr());
-                    logger.warn("ResultCd: "+notiStatus.getResultCd());
-                    logger.warn("ResultMsg: "+notiStatus.getResultMesg());
+                // String ResultCd = notiRestfulClient.getNotificationStatus(resp);
+                // System.out.println(ResultCd);
+                List<NotiStatus> notiStatusList = notiRestfulClient
+                        .getNotificationNotificationStatus(resp);
+                for (NotiStatus notiStatus : notiStatusList) {
+                    logger.warn("ChanAddr: " + notiStatus.getChanAddr());
+                    logger.warn("ResultCd: " + notiStatus.getResultCd());
+                    logger.warn("ResultMsg: " + notiStatus.getResultMesg());
                 }
             } else {
-                ScopesFault scopesFault = notiRestfulClient.getScopesFault(resp);
+                ScopesFault scopesFault =
+                        notiRestfulClient.getScopesFault(resp);
                 logger.error("[Fail] {}", scopesFault.getDescription());
                 // handle the soap fault
             }
@@ -298,34 +307,61 @@ public class EmailEventListener {
 
     private boolean whitelistFilter(String to) {
         AntPathMatcher pathMatcher = new AntPathMatcher();
-        if(whitelist != null) {
+        if (whitelist != null) {
             return Arrays.stream(whitelist)
                     .anyMatch(p -> pathMatcher.match(p, to));
-        } else{
+        } else {
             return false;
         }
     }
 
 
-    private Properties getSSLProperties(String endPointName, String endPointUrl) throws Exception {
-//         String curPath = new File(".").getCanonicalPath();
-//
-//         String password = "P@ssw0rd";
-//         String alias = "dsign";
-//         String propertyFile = curPath + "/proximity.properties";
-//         String keyStoreFile = curPath + "/ghbobsuat.csb.hksarg.p12";
+    private Properties getSSLProperties(String endPointName, String endPointUrl)
+            throws Exception {
+        String curPath = new File(".").getCanonicalPath();
+        
+        String password = "P@ssw0rd";
+        String alias = "dsign";
+        String propertyFile = curPath + "/proximity.properties";
+        String keyStoreFile = curPath + "/ghbobsuat.csb.hksarg.p12";
 
         Properties propAuth = new Properties();
-        propAuth.setProperty(PropertyNames.AUTH_TYPE_PROPERTY, PropertyNames.AUTH_SSL_CLIENT_X509_CERTIFICATE);
-        propAuth.setProperty(PropertyNames.PROXIMITY_CONFIG_FILE_PROPERTY, propertyFilePath);
+        propAuth.setProperty(PropertyNames.AUTH_TYPE_PROPERTY,
+                PropertyNames.AUTH_SSL_CLIENT_X509_CERTIFICATE);
+        propAuth.setProperty(PropertyNames.PROXIMITY_CONFIG_FILE_PROPERTY,
+                propertyFile);
 
-        propAuth.setProperty(PropertyNames.KEY_STORE_FILE_NAME_PROPERTY, keyStoreFilePath);
-        propAuth.setProperty(PropertyNames.KEY_STORE_PASSWORD_PROPERTY, keyStoreFilePassword);
-        propAuth.setProperty(PropertyNames.KEY_STORE_TYPE_PROPERTY, PropertyNames.KEY_STORE_TYPE_PKCS12);
-        propAuth.setProperty(PropertyNames.KEY_ALIAS_PROPERTY, keyStoreFileAlias);
-        propAuth.setProperty(PropertyNames.KEY_ALIAS_PASSWORD_PROPERTY, keyStoreFilePassword);
+        propAuth.setProperty(PropertyNames.KEY_STORE_FILE_NAME_PROPERTY,
+            keyStoreFile);
+        propAuth.setProperty(PropertyNames.KEY_STORE_PASSWORD_PROPERTY,
+                password);
+        propAuth.setProperty(PropertyNames.KEY_STORE_TYPE_PROPERTY,
+                PropertyNames.KEY_STORE_TYPE_PKCS12);
+        propAuth.setProperty(PropertyNames.KEY_ALIAS_PROPERTY,
+                alias);
+        propAuth.setProperty(PropertyNames.KEY_ALIAS_PASSWORD_PROPERTY,
+                password);
 
         propAuth.setProperty(endPointName, endPointUrl);
+
+        // Properties propAuth = new Properties();
+        // propAuth.setProperty(PropertyNames.AUTH_TYPE_PROPERTY,
+        //         PropertyNames.AUTH_SSL_CLIENT_X509_CERTIFICATE);
+        // propAuth.setProperty(PropertyNames.PROXIMITY_CONFIG_FILE_PROPERTY,
+        //         propertyFilePath);
+
+        // propAuth.setProperty(PropertyNames.KEY_STORE_FILE_NAME_PROPERTY,
+        //         keyStoreFilePath);
+        // propAuth.setProperty(PropertyNames.KEY_STORE_PASSWORD_PROPERTY,
+        //         keyStoreFilePassword);
+        // propAuth.setProperty(PropertyNames.KEY_STORE_TYPE_PROPERTY,
+        //         PropertyNames.KEY_STORE_TYPE_PKCS12);
+        // propAuth.setProperty(PropertyNames.KEY_ALIAS_PROPERTY,
+        //         keyStoreFileAlias);
+        // propAuth.setProperty(PropertyNames.KEY_ALIAS_PASSWORD_PROPERTY,
+        //         keyStoreFilePassword);
+
+        // propAuth.setProperty(endPointName, endPointUrl);
 
         return propAuth;
     }
